# hlmagic

./: .gitignore  GEMINI.md  README.md  TODO.md  debug_status.py  install.ps1  pyproject.toml  start_hlmagic.bat  start_hlmagic.ps1  y
hlmagic/: __main__.py  main.py  server.py
hlmagic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hlmagic/commands/: init.py
hlmagic/utils/: agent.py  config.py  hardware.py  templates.py  tools.py  update.py  wsl.py
tests/: test_security.py  test_template_injection.py  test_templates.py
