[project]
name = "hlmagic"
version = "0.4.6"
description = "Autonomous, local-AI Homelab Agent for WSL2"
dependencies = [
    "typer[all]",
    "rich",
    "ollama",
    "psutil",
    "fastapi",
    "uvicorn",
    "python-multipart"
]

[project.scripts]
hlmagic = "hlmagic.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
